# zippy

./: .gitignore  CMakeLists.txt  README.md  west.yml
app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
app/include/features/grub_commander/: grub_commander.h
app/include/ui/: ui.h
app/include/ui/themes/: zippy_theme.h  zippy_theme_default.h
app/include/ui/topbar/: topbar_song.h  topbar_time.h
app/include/usb/: raw_hid.h
app/include/zippy/: zippy_msg.h
app/src/: CMakeLists.txt  main.c
app/src/features/: CMakeLists.txt
app/src/features/display_brightness/: CMakeLists.txt  display_brightness.c
app/src/features/grub_commander/: CMakeLists.txt  grub_commander.c
app/src/grub_commander/: CMakeLists.txt  grub_commander.c
app/src/grubcommander/: grub_commander.c
app/src/ui/: CMakeLists.txt  ui.c  ui.h
app/src/ui/tabs/: CMakeLists.txt  tab_audio_controller.c  tab_audio_player.c  tab_grub_commander.c  tab_macros.c  tab_skeleton.c  tabs.h
app/src/ui/themes/: CMakeLists.txt  zippy_theme_default.c
app/src/ui/topbar/: CMakeLists.txt  topbar_song.c  topbar_time.c
app/src/usb/: CMakeLists.txt  keyboard.c  msc.c  raw_hid.c  raw_hid_parse.c  usb.c  usb_zbus_messages.h
